[package]
name = "imageproc-italic-text"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.7"
imageproc = "0.23.0"
imageutil = "0.0.5"
once_cell = "1.19.0"
rusttype = "0.9.3"
tokio = { version = "1.35.0", features = ["full"] }
